[package]
name = "everscale-monitoring"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["geoip-resolver"]

[dependencies]
anyhow = "1.0"
argh = "0.1"
async-trait = "0.1"
atty = "0.2"
broxus-util = { version = "0.1.4", features = ["serde", "config", "alloc", "public-ip"] }
config = { version = "0.13", default-features = false, features = ["yaml"] }
everscale-network = "0.4"
futures = "0.3"
once_cell = "1.10.0"
parking_lot = { version = "0.12.0", features = ["hardware-lock-elision"] }
pomfrit = "0.1"
rand = "0.8"
rustc-hash = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "parking_lot"] }
tracing = "0.1"
tracing-subscriber = "0.3"

nekoton-abi = { git = "https://github.com/broxus/nekoton.git", features = ["derive"] }

ton-indexer = { git = "https://github.com/broxus/ton-indexer.git", features = ["archive-uploader"] }

ton_block = { git = "https://github.com/broxus/ton-labs-block.git" }
ton_types = { git = "https://github.com/broxus/ton-labs-types.git" }
ton_abi = { git = "https://github.com/broxus/ton-labs-abi.git" }
