[package]
name = "everscale-monitoring"
version = "0.1.1"
edition = "2021"

[workspace]
members = ["geoip-resolver"]

[dependencies]
anyhow = "1.0"
arc-swap = "1.5"
argh = "0.1"
async-trait = "0.1"
broxus-util = { version = "0.2", features = ["serde", "config", "alloc", "public-ip", "signal"] }
config = { version = "0.13", default-features = false, features = ["yaml"] }
everscale-crypto = "0.2.0-pre.1"
everscale-network = "0.5"
futures = "0.3"
hex = "0.4.3"
once_cell = "1.10.0"
parking_lot = { version = "0.12.0", features = ["hardware-lock-elision"] }
pomfrit = "0.1"
rand = "0.8"
rustc-hash = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tl-proto = { version = "0.4", features = ["derive", "bytes"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "parking_lot"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
is-terminal = "0.4"

nekoton-abi = { git = "https://github.com/broxus/nekoton.git", features = ["derive"], rev = "d23e741c72061622871bef1c6b77f89c37d79139" }

ton-indexer = { git = "https://github.com/broxus/ton-indexer.git", features = ["archive-uploader"] }

ton_block = { git = "https://github.com/broxus/ton-labs-block.git" }
ton_types = { git = "https://github.com/broxus/ton-labs-types.git" }
ton_abi = { git = "https://github.com/broxus/ton-labs-abi.git" }

[patch."https://github.com/broxus/ton-labs-executor.git"]
ton_executor = { git = "https://www.github.com/broxus/ton-labs-executor.git", branch = "old" }

[patch."https://github.com/broxus/ton-labs-vm.git"]
ton_vm = { git = "https://www.github.com/broxus/ton-labs-vm.git", branch = "old" }

[patch."https://github.com/broxus/ton-labs-abi.git"]
ton_abi = { git = "https://www.github.com/broxus/ton-labs-abi.git", branch = "old" }

[patch."https://github.com/broxus/ton-labs-block.git"]
ton_block = { git = "https://www.github.com/broxus/ton-labs-block.git", branch = "old" }

[patch."https://github.com/broxus/ton-labs-types.git"]
ton_types = { git = "https://www.github.com/broxus/ton-labs-types.git", branch = "old" }
