[package]
name = "geoip-resolver"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
argh = "0.1"
bincode = "1.3"
csv = "1.1"
env_logger = "0.9"
everscale-network = { version = "0.3", default-features = false, features = ["dht"] }
futures = "0.3"
indicatif = "0.17"
log = "0.4"
pomfrit = { version = "0.1", default-features = false }
public-ip = "0.2"
rand = "0.8"
rustc-hash = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
tikv-jemalloc-sys = { version = "0.4", features = ["unprefixed_malloc_on_supported_platforms", "background_threads"] }
tikv-jemallocator = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "parking_lot"] }

rocksdb = { git = "https://github.com/Rexagon/rust-rocksdb.git", features = ["lz4", "jemalloc"], default-features = false }

global-config = { git = "https://github.com/broxus/ton-indexer.git" }
