[package]
name = "geoip-resolver"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
argh = "0.1"
base64 = "0.21"
broxus-util = { version = "0.2", default-features = false, features = ["public-ip", "alloc"] }
bincode = "1.3"
csv = "1.1"
everscale-network = { version = "0.5", default-features = false, features = ["dht"] }
futures = "0.3"
indicatif = "0.17"
pomfrit = { version = "0.1", default-features = false }
rand = "0.8"
rustc-hash = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "parking_lot"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
is-terminal = "0.4"

rocksdb = { version = "0.20", features = [
    "zstd",
    "lz4",
    "jemalloc",
    "multi-threaded-cf",
], default-features = false }

global-config = { git = "https://github.com/broxus/ton-indexer.git" }
